--- a/TA_Add2DB/xs-app.json
+++ b/TA_Add2DB/xs-app.json
@@ -6,6 +6,13 @@
   },
   "routes": [
     {
+      "source": "^/mainService/(.*)$",
+      "target": "$1",
+      "authenticationType": "none",
+      "destination": "mainService",
+      "csrfProtection": false
+    },
+    {
       "source": "^(.*)$",
       "target": "$1",
       "service": "html5-apps-repo-rt",
